fix(RepeatWord): made text overflow hidden and provided full text using tooltip fixes #15

--- a/src/components/Ricorda/components/TodayWords/components/RepeatWord/RepeatWord.css
+++ b/src/components/Ricorda/components/TodayWords/components/RepeatWord/RepeatWord.css
@@ -36,11 +36,15 @@
   width: 100%;
 }
 
-.source-word {
+.source-word-tooltip {
   padding-top: 5px;
   margin-right: 5px;
-  font-style: italic;
   margin-left: auto;
+}
+
+.source-word {
+  font-style: italic;
+  overflow: hidden;
 }
 
 .repeat-word-source-word-block > button:nth-child(2) {
